--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -11,7 +11,7 @@
 </style>
 <header class="margin-top-0">
 
-    <video autoplay muted loop id="videoHomepage" *ngIf="this.router.url !== '/login'">
+    <video autoplay muted loop id="videoHomepage">
         <source src="http://localhost:4200/assets/videos/video-homepage.mp4" type="video/mp4">
     </video>
 
