update link github

--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -105,8 +105,8 @@
                         <h4>Gabriel Carvalho</h4>
                         <span class="primarycol">- Analista de Sistemas -</span>
                         <ul class="social-icons">
-                            <li><a href="https://www.facebook.com/people/Gabriel-Carvalho/100003588468022"><i class="fa fa-facebook"></i></a></li>
-                            <li><a href="#"><i class="fa fa-github"></i></a></li>
+                            <li><a href="https://www.facebook.com/people/Gabriel-Carvalho/100003588468022" target="_blank"><i class="fa fa-facebook"></i></a></li>
+                            <li><a href="https://github.com/GabrielCarvalho10" target="_blank"><i class="fa fa-github"></i></a></li>
                         </ul>
                     </div>
                 </div>
