--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -1,27 +1,27 @@
 <!-- FOOTER =============================-->
 
 <section class="content-block">
-	<div class="container">
-		<div class="row">
-			<div class="col-sm-10 col-sm-offset-1">
-			</div>
-		</div>
-	</div>
+    <div class="container">
+        <div class="row">
+            <div class="col-sm-10 col-sm-offset-1">
+            </div>
+        </div>
+    </div>
 </section>
 
 <div class="footer text-center">
-	<div class="container">
-		<div class="row">
-			<p class="footernote">
-				Conecte-se com a 99DOGS
-			</p>
-			<ul class="social-iconsfooter">
-				<li><a [routerLink]="['/contact']"><i class="fa fa-envelope"></i></a></li>
-				<li><a href="https://github.com/luiscovelo/pfc-99dogs" target="_blank"><i class="fa fa-github"></i></a></li>
-			</ul>
-			<p>
-				 &copy; 2021 99DOGS<br/>
-			</p>
-		</div>
-	</div>
+    <div class="container">
+        <div class="row">
+            <p class="footernote">
+                Conecte-se com a 99DOGS
+            </p>
+            <ul class="social-iconsfooter">
+                <li><a [routerLink]="['/contact']"><i class="fa fa-envelope"></i></a></li>
+                <li><a href="https://github.com/99dogs" target="_blank"><i class="fa fa-github"></i></a></li>
+            </ul>
+            <p>
+                &copy; 2021 99DOGS<br/>
+            </p>
+        </div>
+    </div>
 </div>
