--- a/src/app/contact/contact.component.html
+++ b/src/app/contact/contact.component.html
@@ -22,12 +22,12 @@
                         Sua mensagem foi enviado com sucesso. Obrigado!
                     </div>
                 </div>
-                <form method="post" action="contact.php" id="contactform">
+                <form method="post" action="#" id="contactform">
                     <div class="form">
                         <input type="text" name="name" placeholder="Seu nome *">
                         <input type="text" name="email" placeholder="Seu e-mail *">
                         <textarea name="comment" rows="7" placeholder="Escreva sua mensagem *"></textarea>
-                        <input type="submit" id="submit" class="clearfix btn" value="Enviar">
+                        <input type="submit" id="submit" class="clearfix btn" value="Enviar" disabled>
                     </div>
                 </form>
             </div>
