--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -30,10 +30,11 @@
                         <li class="propClone"><a [routerLink]="['/']">Home</a></li>
                         <li class="propClone"><a [routerLink]="['/about']">Sobre</a></li>
                         <li class="propClone"><a [routerLink]="['/contact']">Contato</a></li>
+                        <li class="propClone"><a [routerLink]="['/politica-privacidade']">Política de privacidade</a></li>
                     </ul>
                 </div>
             </div>
         </nav>
-        <dogs-header-pictures></dogs-header-pictures>
+        <app-header-pictures></app-header-pictures>
     </div>
 </header>
