--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,7 @@
-<dogs-header></dogs-header>
+<app-header></app-header>
 
 <div class="offcanvas-wrapper">
   <router-outlet></router-outlet>
-
-  <dogs-footer></dogs-footer>
+  <app-footer></app-footer>
+  <app-footer-termos-privacidade></app-footer-termos-privacidade>
 </div>
