update commit privacidade

--- a/src/app/politica-privacidade/politica-privacidade.component.html
+++ b/src/app/politica-privacidade/politica-privacidade.component.html
@@ -3,7 +3,7 @@
     <div class="container toparea">
         <div class="underlined-title">
             <div class="editContent">
-                <h1 class="text-center latestitems">Política de privadiade</h1>
+                <h1 class="text-center latestitems">Política de privacidade</h1>
             </div>
             <div class="wow-hr type_short">
                 <span class="wow-hr-h">
