--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -12,7 +12,7 @@
 <header class="margin-top-0">
 
     <video autoplay muted loop id="videoHomepage">
-        <source src="http://localhost:4200/assets/videos/video-homepage.mp4" type="video/mp4">
+        <source src="./assets/videos/video-homepage.mp4" type="video/mp4">
     </video>
 
     <div class="wrapper">
