--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -3,8 +3,47 @@
     <div class="container toparea">
         <div class="underlined-title">
             <div class="editContent">
-                <h1 class="text-center latestitems">99Dogs</h1>
-                <p class="text-center latestitems">Conheça um pouco mais da aplicação.</p>
+                <h1 class="text-center latestitems">Público-alvo</h1>
+                <p class="text-center latestitems"></p>
+            </div>
+            <div class="wow-hr type_short">
+                <span class="wow-hr-h">
+                <i class="fa fa-star"></i>
+                <i class="fa fa-star"></i>
+                <i class="fa fa-star"></i>
+                </span>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-md-12 fadeInUpNow" style="display: flex;justify-content: center;">
+                <div class="boxservice">
+                    <i class="fa fa-paw"></i>
+                    <h3>Dog walker</h3>
+                    <p>
+                        Você que já passea com cães ou que deseja fazer uma renda extra prestando este serviço.
+                    </p>
+                </div>
+                <div class="boxservice">
+                    <i class="fa fa-user"></i>
+                    <h3>Donos de cães</h3>
+                    <p>
+                        Você que precisa encontrar um profissional qualificado para passear com o seu cão.
+                    </p>
+                </div>
+            </div>
+        </div>
+        <!-- end row -->
+    </div>
+</section>
+
+<br><br>
+
+<!--  SECTION(system) -->
+<section id="Section-system" class="item content">
+    <div class="container toparea">
+        <div class="underlined-title">
+            <div class="editContent">
+                <h1 class="text-center latestitems">Funcionalidades</h1>
             </div>
             <div class="wow-hr type_short">
                 <span class="wow-hr-h">
@@ -55,6 +94,59 @@
 
 <br><br>
 
+<section id="Section-team" class="fullbg color-white">
+    <div class="container">
+        <div class="underlined-title">
+            <div class="editContent">
+                <h1 class="text-center latestitems">O aplicativo</h1>
+            </div>
+            <div class="wow-hr type_short">
+                <span class="wow-hr-h">
+                <i class="fa fa-star"></i>
+                <i class="fa fa-star"></i>
+                <i class="fa fa-star"></i>
+                </span>
+            </div>
+        </div>
+        <div class="row animated fadeInUpNow">
+            <div class="col-md-3">
+                <div class="thumbnail">
+                    <img src="../../assets/images/app/app-1.jpeg" alt="" style="max-height: 75vh;">
+                    <div class="caption">
+                        <p>Passeios solicitados</p>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-3">
+                <div class="thumbnail">
+                    <img src="../../assets/images/app/app-2.jpeg" alt="" style="max-height: 75vh;">
+                    <div class="caption">
+                        <p>Agenda de passeios</p>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-3">
+                <div class="thumbnail">
+                    <img src="../../assets/images/app/app-3.jpeg" alt="" style="max-height: 75vh;">
+                    <div class="caption">
+                        <p>Informações do dog walker</p>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-3">
+                <div class="thumbnail">
+                    <img src="../../assets/images/app/app-4.jpeg" alt="" style="max-height: 75vh;">
+                    <div class="caption">
+                        <p>Detalhes de um passeio</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
+
+<br><br>
+
 <!-- SECTION(team) -->
 <section id="Section-team" class="fullbg color-white">
     <div class="container">
@@ -73,7 +165,7 @@
         <div class="row animated fadeInUpNow">
             <div class="col-md-4">
                 <div class="thumbnail">
-                    <img src="../../assets/images/profile/luiscovelo.jpg" alt="" style="max-height: 222px;">
+                    <img src="../../assets/images/profile/luiscovelo.jpg" alt="" style="max-height: 30vh">
                     <div class="caption">
                         <h4>Luis Felipe Covelo</h4>
                         <span class="primarycol">- Analista de Sistemas -</span>
@@ -87,7 +179,7 @@
             </div>
             <div class="col-md-4">
                 <div class="thumbnail">
-                    <img src="../../assets/images/profile/marco.jpg" alt="" style="max-height: 222px;">
+                    <img src="../../assets/images/profile/marco.jpg" alt="" style="max-height: 30vh">
                     <div class="caption">
                         <h4>Marco Antônio</h4>
                         <span class="primarycol">- Analista de Sistemas -</span>
@@ -100,7 +192,7 @@
             </div>
             <div class="col-md-4">
                 <div class="thumbnail">
-                    <img src="../../assets/images/profile/gabriel.jpg" alt="" style="max-height: 222px;">
+                    <img src="../../assets/images/profile/gabriel.jpg" alt="" style="max-height: 30vh">
                     <div class="caption">
                         <h4>Gabriel Carvalho</h4>
                         <span class="primarycol">- Analista de Sistemas -</span>
