--- a/src/app/contact/contact.component.html
+++ b/src/app/contact/contact.component.html
@@ -4,7 +4,7 @@
         <div class="underlined-title">
             <div class="editContent">
                 <h1 class="text-center latestitems">Contato</h1>
-                <p class="text-center latestitems">Seu feedback é importante para nós.</p>
+                <p class="text-center latestitems">Sua opinião é importante para nós.</p>
             </div>
             <div class="wow-hr type_short">
                 <span class="wow-hr-h">
