--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -32,7 +32,7 @@
             <div class="col-md-4">
                 <!-- <i class="fa fa-comments infoareaicon"></i> -->
                 <div class="infoareawrap">
-                    <h1 class="text-center subtitle">Desempregado? Que tal ser Dog Walker!</h1>
+                    <h1 class="text-center subtitle">Desempregado(a)? Que tal ser Dog Walker!</h1>
                     <p>
                         A rotina dos brasileiros mudou drasticamente com a pandemia, mas não foram só nós, humanos, que estamos sofrendo com os efeitos desse vírus...
                     </p>
@@ -52,25 +52,6 @@
                     <p class="text-center">
                         <a href="http://cienciaecultura.bvs.br/scielo.php?script=sci_arttext&pid=S0009-67252020000100004" target="_blank">- Continuar lendo -</a>
                     </p>
-                </div>
-            </div>
-        </div>
-    </div>
-</div>
-
-
-<!-- TESTIMONIAL =============================-->
-<div class="item content">
-    <div class="container">
-        <div class="col-md-10 col-md-offset-1">
-            <div class="slide-text">
-                <div>
-                    <h2><span class="uppercase">Facilita muito!</span></h2>
-                    <img src="http://wowthemes.net/demo/salique/salique-boxed/images/temp/avatar2.png" alt="Awesome Support">
-                    <p>
-                        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Provident illum illo laboriosam ipsum nostrum asperiores optio, architecto, ea, sunt totam esse temporibus recusandae reprehenderit quis quibusdam quisquam aut cumque ratione!
-                    </p>
-                    <i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i><i class="fa fa-star"></i>
                 </div>
             </div>
         </div>
