--- a/src/app/header/header-pictures/header-pictures.component.html
+++ b/src/app/header/header-pictures/header-pictures.component.html
@@ -3,10 +3,10 @@
         <div class="col-md-12 text-center">
             <div class="text-homeimage">
                 <div class="maintext-image" data-scrollreveal="enter top over 1.5s after 0.1s">
-                     Seja Bem-Vindo ao 99DOGS
+                    Seja bem-vindo(a) ao 99Dogs
                 </div>
                 <div class="subtext-image" data-scrollreveal="enter bottom over 1.7s after 0.3s">
-                     A melhor opção para seu cão.
+                    A melhor opção para seu cão.
                 </div>
             </div>
         </div>
