--- a/src/app/politica-privacidade/politica-privacidade.component.html
+++ b/src/app/politica-privacidade/politica-privacidade.component.html
@@ -15,7 +15,7 @@
         </div>
         <div class="row">
             <div class="col-lg-8 col-lg-offset-2">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Reprehenderit dicta quisquam error repudiandae quae architecto perferendis fugit aperiam eveniet cumque magni, velit quaerat, adipisci eaque tenetur explicabo nisi esse pariatur. Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolore dolores tenetur commodi quia cupiditate nam temporibus obcaecati molestiae nulla ratione, voluptate sequi! Rem dignissimos ipsam perspiciatis blanditiis ducimus libero? Explicabo. Lorem, ipsum dolor sit amet consectetur adipisicing elit. Fugit laborum nam neque dolores animi culpa nostrum eaque vel. Hic doloremque quas minus tempora earum cumque cupiditate rem ipsa corporis eius.
+                <iframe style="width: 100%;height: 100vh;" src="https://cdn.statically.io/gh/99dogs/documents/master/politica-de-dados-e-privacidade.pdf" frameborder="0"></iframe>
             </div>
         </div>
     </div>
